syntax = "proto3";

package event;

import "proto/common.proto";


option go_package = "shared/proto/event";

service EventService {
    rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
    rpc GetEventDetail(GetEventDetailRequest) returns (GetEventDetailResponse);
    
    // Internal use / Booking service use
    rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
}

message Event {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string location = 4;
    int64 start_time = 5; // Unix timestamp
    int64 end_time = 6;
    int32 total_seats = 7;
    int32 available_seats = 8;
    double price = 9;
}

message GetEventsRequest {
    common.PaginationRequest pagination = 1;
}

message GetEventsResponse {
    repeated Event events = 1;
    common.PaginationMetadata meta = 2;
}

message GetEventDetailRequest {
    int64 event_id = 1;
}

message GetEventDetailResponse {
    Event event = 1;
}

message CheckAvailabilityRequest {
    int64 event_id = 1;
    int32 quantity = 2;
}

message CheckAvailabilityResponse {
    bool is_available = 1;
    double unit_price = 2; // Mengembalikan harga saat ini untuk validasi
}